deleted api keys

--- a/Sesion 18/vantage.ipynb
+++ b/Sesion 18/vantage.ipynb
@@ -43,20 +43,7 @@
     "                open=respuesta['1. open'],\n",
     "                high=respuesta['2. high'],\n",
     "                low=respuesta['3. low'],\n",
-    "                close=respuesta['4. close'])])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "Api keys:\n",
-    "Alpha vantage\n",
-    "16R46JKNSLLCDYFO\n",
-    "OpenAI\n",
-    "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\n",
-    "weather\n",
-    "925bc67b57d1fd308b441c7b8b1d4052\n",
-    "'''"
+    "                close=respuesta['4. close'])])\n"
    ]
   },
   {
@@ -86,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
