pandas y api modified

--- a/Tareas/Pandas y api.ipynb
+++ b/Tareas/Pandas y api.ipynb
@@ -21,12 +21,14 @@
     "        import pandas as pd\n",
     "        url=self.url_base+'/characters'\n",
     "        r=requests.get(url)\n",
+    "        print(type(r.json()))\n",
     "        return pd.DataFrame(r.json())\n",
     "    def hechizos(self):\n",
     "        import requests\n",
     "        import pandas as pd\n",
     "        url=self.url_base+'/spells'\n",
     "        r=requests.get(url)\n",
+    "        print(type(r.json()))\n",
     "        return pd.DataFrame(r.json())\n",
     "    def personaje_por_casa(self):\n",
     "        import requests\n",
@@ -43,9 +45,8 @@
    "outputs": [],
    "source": [
     "Data=hpApi()\n",
-    "#Data.personajes()\n",
-    "#Data.hechizos()\n",
-    "Data.personaje_por_casa()"
+    "Data.personajes()\n",
+    "Data.hechizos()"
    ]
   }
  ],
@@ -65,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
